[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Dialogue/DialogueBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Dialogue/DialogueHandler.gd" type="Script" id=2]
[ext_resource path="res://Images/locations/factory_exterior.png" type="Texture" id=3]
[ext_resource path="res://Room Scripts/FactoryExterior.gd" type="Script" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueBox" parent="." instance=ExtResource( 1 )]

[node name="DialogueHandler" type="Node" parent="."]
script = ExtResource( 2 )
dialogue_path = "res://Dialogue Lines/factory_exterior.json"

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 80.0
margin_top = 30.0
margin_right = 1360.0
margin_bottom = 750.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="car" type="TextureButton" parent="TextureRect"]
margin_left = 70.0
margin_top = 600.0
margin_right = 330.0
margin_bottom = 700.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chimney" type="TextureButton" parent="TextureRect"]
margin_left = 380.0
margin_top = 10.0
margin_right = 810.0
margin_bottom = 370.0

[node name="door" type="TextureButton" parent="TextureRect"]
margin_left = 550.0
margin_top = 540.0
margin_right = 750.0
margin_bottom = 700.0

[node name="FactoryExterior" type="Node" parent="."]
script = ExtResource( 4 )
[connection signal="mouse_entered" from="TextureRect/car" to="FactoryExterior" method="_on_car_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/car" to="FactoryExterior" method="_on_car_mouse_exited"]
[connection signal="pressed" from="TextureRect/car" to="FactoryExterior" method="_on_car_pressed"]
[connection signal="mouse_entered" from="TextureRect/chimney" to="FactoryExterior" method="_on_chimney_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/chimney" to="FactoryExterior" method="_on_chimney_mouse_exited"]
[connection signal="pressed" from="TextureRect/chimney" to="FactoryExterior" method="_on_chimney_pressed"]
[connection signal="mouse_entered" from="TextureRect/door" to="FactoryExterior" method="_on_door_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/door" to="FactoryExterior" method="_on_door_mouse_exited"]
[connection signal="pressed" from="TextureRect/door" to="FactoryExterior" method="_on_door_pressed"]
